@@ -1,3 +1,4 @@
+* Manage readonly state on Inventory Line
 * Add lead time and transit location for internal shipments between warehouses
 
 Version 4.0.0 - 2016-05-02
